# ppattern-iwoca

./: INPUT.md  LICENSE  README.md  READOTHER.md  READOTHER.md.sv  ppattern-generic.cabal  ppattern.cabal
notebook/: ppattern-benchmark-analysis.ipynb
scripts/: anonymous.py  exact-distribution.sh  ppattern-benchmark-loop.sh  ppattern-benchmark.sh  ppattern-random-benchmark.sh  ppattern-split-benchmark.sh  split-distribution.sh  split-parameter.sh
src/: ExactDistribution.hs  PPatternBenchmark.hs  PPatternRandomBenchmark.hs  PPatternSplitBenchmark.hs  SplitDistribution.hs  SplitParameter.hs
src/Data/Algorithm/: PPattern.hs
src/Data/Algorithm/PPattern/: APerm.hs  Color.hs  ColorPerm.hs  Combinatorics.hs  CompactSeparatingTree.hs  Conflict.hs  DecompositionTree.hs  DecreasingBinaryTree.hs  IntPartition.hs  List.hs  MinMaxTree.hs  Occurrence.hs  Perm.hs  PointPerm.hs  Random.hs  Search.hs  SeparatingTree.hs  Sort.hs  SplitTree.hs  StackSort.hs  State.hs  Strategy.hs  Tools.hs
src/Data/Algorithm/PPattern/APerm/: Avoidance.hs  Compose.hs  Enumerate.hs  Monotone.hs  Operation.hs  Sort.hs  Statistics.hs  Sub.hs  Sum.hs
src/Data/Algorithm/PPattern/APerm/Inner/: Annotation.hs  Monotone.hs  Operation.hs  Sort.hs  Statistics.hs  Sub.hs
src/Data/Algorithm/PPattern/Geometry/: APoint.hs  ColorPoint.hs  Interval.hs  Point.hs
src/Data/Algorithm/PPattern/Geometry/APoint/: List.hs
src/Data/Algorithm/PPattern/Geometry/Point/: List.hs
src/Data/Algorithm/PPattern/Perm/: Avoidance.hs  Avoiding.hs  ColorPoint.hs  Compose.hs  Enumerate.hs  List.hs  Monotone.hs  Operation.hs  Random.hs  Sort.hs  Split.hs  Statistics.hs  Sub.hs  Sum.hs  T.hs
src/Data/Algorithm/PPattern/Perm/Inner/: Annotation.hs  Monotone.hs  Operation.hs  Sort.hs  Statistics.hs  Sub.hs
src/Data/Algorithm/PPattern/Perm/T/: Statistics.hs
src/Data/Algorithm/PPattern/Search/: Conflict.hs  ConflictSelection.hs  Context.hs  Occurrence.hs  State.hs  Strategy.hs
src/Data/Algorithm/PPattern/Search/ConflictSelection/: Link.hs  Link2.hs
src/Data/Algorithm/PPattern/Search/State/: Access.hs  Embedding.hs  IncreasingFactorization.hs  Next.hs
src/Data/Algorithm/PPattern/Search/Strategy/: Link.hs  Link2.hs
src/Data/Algorithm/PPattern/State/: Access.hs  Embedding.hs  IncreasingFactorization.hs  Next.hs
src/Data/Algorithm/PPattern/Strategy/: Link.hs  Link2.hs  PLink.hs  T.hs
tests/: SpecHelper.hs
tests/Data/Algorithm/PPattern/: PermSpec.hs
