Name:                ppattern-generic
Version:             0.1.0.0
-- synopsis:
-- description:
License:             MIT
License-File:        LICENSE
Author:              Laurent Bulteau, Romeo Rizzi, Stéphane Vialette
Maintainer:          vialette@gmail.com
-- copyright:
Category:            Math
Build-Type:          Simple
Extra-Source-Files:  README.md
Cabal-Version:       >=1.22

Library
  ghc-options: -Wall -Werror -O2
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  Build-Depends:
    base >=4.8,
    containers >=0.5 && <0.6,
    patience >=0.1
  Exposed-Modules: Data.Algorithm.PPattern.Perm,
                   Data.Algorithm.PPattern.Strategy,
                   Data.Algorithm.PPattern
